# sl_ble_desktop

./: CMakeLists.txt  README.md  connectthread.cpp  connectthread.h  mainwindow.cpp  mainwindow.h  mainwindow.ui.autosave  mythread.cpp  mythread.hpp  sl_ble_desktop_zh_CN.ts  user_service.h
simpleble/include/simpleble/: Peripheral.h
simpleble/src/: Peripheral.cpp
simpleble/src/windows/: PeripheralBase.cpp  PeripheralBase.h
